--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -22,11 +22,16 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' 
-          cache: 'npm'
+          node-version: '24' 
+          cache: 'pnpm' 
 
       - name: Cache npm dependencies
         uses: actions/cache@v4
