--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -63,7 +63,7 @@ jobs:
           fi
 
       - name: Make gradlew executable
-        run: chmod +x ./android/gradlew
+        run: chmod +x ./gradlew
         working-directory: ./android
 
       - name: Build Release APK
