--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -16,16 +16,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Set up pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -33,25 +34,17 @@ jobs:
           node-version: '24' 
           cache: 'pnpm' 
 
-      - name: Cache npm dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Install Capacitor CLI
-        run: npm install -g @capacitor/cli
+        run: pnpm install -g @capacitor/cli
 
       - name: Build web assets
-        run: npm run build
+        run: pnpm run build
 
       - name: Sync Capacitor assets
-        run: npx cap sync android
+        run: pnpx cap sync android
 
 
       - name: Decode Keystore
