--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/android": "7.4.1",
     "@capacitor/app": "7.0.1",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.4.1",
     "@capacitor/haptics": "7.0.1",
